# cai_Akagi

./: .gitignore  Cargo.toml  LICENSE.txt  NOTICE  README.md  README.zh-CN.md  README.zh-TW.md  build.rs  start-akagi-dev.ps1  tauri.conf.json
.github/workflows/: auto-liqi.yml  ci.yml  release.yml
capabilities/: default.json
frontend/: README.md  debug.html  frontend_ref.md  index.html  mahgen.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/css/: style.css
frontend/js/: app.js  i18n.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AddTileMenu.tsx  BrandMarks.tsx  ErrorBoundary.tsx  Mahgen.tsx  ManifestField.tsx  Sidebar.tsx  (+2 more)
icons/: icon.icns
mjai_bot/common/: policy_guard.py  test_policy_guard.py
mjai_bot/example/: README.md  bot.py  manifest.toml  pyproject.toml
mjai_bot/mortal/: bot.py  manifest.toml  model.py  mortal.pth
mjai_bot/mortal3p/: _libriichi_loader.py  bot.py  manifest.toml  model.py  pyproject.toml  test_libriichi_loader.py  test_meta_show.py
runtime/: .gitkeep
scripts/: README.md  fetch-runtime.sh  fetch_liqi.py  package-zip.sh
src/: cli.rs  event_bus.rs  lib.rs  main.rs  platform.rs
src/analysis/: README.md  agari_rate.rs  hand.rs  improves.rs  mod.rs  result.rs  runner.rs  score.rs  search.rs  shanten.rs  snapshot_adapter.rs  tenpai_rate.rs  tile.rs  waits.rs
src/autoplay/: cdp_input.rs  context.rs  manager.rs  mod.rs  platform.rs
src/bot/: README.md  install.rs  manager.rs  manifest.rs  mod.rs  registry.rs  runner.rs  runtime.rs  supervisor.rs  sync_guard.rs  types.rs
src/bridge/: README.md  mod.rs
src/capture/: README.md  flow.rs  hudsucker_backend.rs  mod.rs
src/config/: README.md  autoplay.rs  bot.rs  capture.rs  general.rs  logging.rs  mod.rs  platform.rs  proxy.rs
src/game_state/: README.md  convert.rs  mahgen_view.rs  mod.rs  score.rs  snapshot.rs  tracker.rs
src/history/: README.md  aggregator.rs  mod.rs  recorder.rs  store.rs
src/inspector/: mod.rs
src/ipc/: README.md  capture_supervisor.rs  commands.rs  mod.rs  proxy_supervisor.rs  state.rs
src/logger/: README.md  binary.rs  flow.rs  mod.rs  session.rs  stream.rs
src/proxy/: README.md  ca.rs  handler.rs  mod.rs
src/schema/: README.md  history.rs  inspector.rs  ipc.rs  mod.rs
src/util/: mod.rs
tests/: analysis_bench.rs  analysis_pipeline.rs  bot_lifecycle.rs  example_bot.rs
(+93 files in other folders)
