[package]
name = "akagi"
version = "3.0.0-alpha.6"
edition = "2021"

[lib]
name = "akagi"

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.14"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "fs", "process", "io-util", "time"] }
async-trait = "0.1.89"
which = "8.0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
tracing-appender = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hudsucker = { version = "0.24", features = ["rcgen-ca", "rustls-client"], default-features = false }
serde_with = "3.18.0"
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
base64 = "0.22"
riichienv-core = "0.4.8"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "http2", "charset"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
globset = "0.4"
tempfile = "3"
futures-util = "0.3"
dirs = "6"
chromiumoxide = "0.9.1"

[dev-dependencies]
tempfile = "3"
