[project]
name = "akagi-example-bot"
version = "0.1.0"
description = "Shanten-evaluating example bot for Akagi v3 (adapted from mjai.app evalbot)."
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }

# `mahjong` is a pure-Python shanten / hand-value calculator (MIT).
# No AGPL packages are pulled into the bot's venv.
dependencies = [
    "mahjong >=1.2,<2",
]

# This bot is a script, not a library — uv installs only the
# dependencies and skips trying to build the project itself.
[tool.uv]
package = false
